Add machine API
